--- a/style.css
+++ b/style.css
@@ -4,12 +4,169 @@
   box-sizing: border-box;
   font-family: "Cormorant Garamond", serif;
 }
-
-h1,
+body {
+  min-height: 100vh;
+  min-width: 100vh;
+}
+h1 {
+  font-family: "Cinzel", serif;
+  font-size: 1.2rem;
+}
 h2 {
   font-family: "Cinzel", serif;
+  font-size: 1rem;
 }
 body {
   font-family: "Cormorant Garamond", serif;
 }
 
+#basic-infoamrtion-form-left {
+  min-width: 25%;
+  height: 100vh;
+  float: left;
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+  border: 1px solid black;
+}
+.abilities-topics {
+  min-width: 33%;
+  max-height: 100vh;
+  float: left;
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+  text-align: center;
+}
+
+.mental-points,
+.mental-names,
+.social-names,
+.social-points,
+.physical-points {
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+  width: 16.6%;
+  float: left;
+}
+
+.talents-names,
+.talents-points,
+.skills-names,
+.skills-points,
+.knowledge-names,
+.knowledge-poits {
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+  width: 16.6%;
+  float: left;
+}
+
+.physical-names {
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+  width: 14%;
+  float: left;
+}
+
+.social-names {
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+  width: 18%;
+  float: left;
+}
+
+#sheet-structure-right {
+  min-width: 75%;
+  height: 100vh;
+  float: left;
+  border: 1px solid black;
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+}
+
+.basic-atributes {
+  min-width: 33%;
+  max-height: 100vh;
+  float: left;
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+}
+
+#logo-image-center {
+  min-width: 100%;
+  float: left;
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+}
+
+.basics {
+  padding: 0;
+  border: 0;
+}
+
+#logoimage {
+  display: block;
+  margin: auto;
+  width: 280px;
+}
+
+.sheetpages {
+  width: 50%;
+  height: 100vh;
+  float: left;
+  border: 1px solid black;
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+}
+
+.advantages {
+  height: 50px;
+  /* border: 1px solid black; */
+}
+.health-left {
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+  width: 60%;
+  float: left;
+}
+
+.health-right {
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+  width: 40%;
+  float: left;
+}
+
+.infoTransformation {
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+  width: 21%;
+  float: left;
+  font-size: small;
+}
+
+.infoTransformationHomid {
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+  width: 16%;
+  float: left;
+  font-size: small;
+}
+
+.midle-left {
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+  width: 40%;
+  float: left;
+}
+.midle-right {
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+  width: 60%;
+  float: left;
+}
+.advantages-topics {
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+  min-width: 33.33%;
+  float: left;
+  text-align: center;
+}
+
+#gifts1,
+#gifts2,
+#gifts3 {
+  text-align: center;
+  font-size: 93%;
+}
+
+.info-for-smaller-font-size {
+  font-size: 93%;
+}
+.background-information {
+  box-sizing: border-box; /* so the borders don't mess up the alignment */
+  width: 100%;
+  float: left;
+}
